# Pokeapi

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  pokemon.rs  search.rs  store.rs
src/lib/: ErrorDisplayer.svelte  Header.svelte  Search.svelte  SearchID.svelte  SearchName.svelte  pokemon.ts  utils.ts
src/lib/pokemon/: RenderPokemon.svelte  RenderPokemonAbility.svelte  RenderPokemonMove.svelte  RenderPokemonSprites.svelte  RenderPokemonStat.svelte  RenderPokemonType.svelte
src/lib/types/: generic.ts  pokemon.ts
