[package]
name = "pokeapi_client"
version = "0.1.0"
description = "A Pokeapi Client"
authors = ["ThePixelCode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
reqwest = "0.12.4"
tauri = { version = "1", features = ["shell-open"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
